--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <body>
     <h1>Match Cards</h1>
     <p>Press Any Key to Start</p>
+    <button class="start-btn">start</button>
     <div class="container">
         <div class="row">
             <div class="card c0 closed"></div>
